# odc-tools

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .yamllint  README.md  SECURITY.md  codecov.yml  pylintrc  setup.py
.dbdata/: postmaster.opts  postmaster.pid
apps/cloud/: README.md  setup.cfg  setup.py
apps/cloud/odc/apps/cloud/: __init__.py  azure_to_tar.py  gs_to_tar.py  redrive_to_queue.py  s3_find.py  s3_inventory.py  s3_to_tar.py  thredds_to_tar.py
apps/dc_tools/: README.md  pyproject.toml  setup.cfg  setup.py
apps/dc_tools/assets/: bootstrap-odc.sh
apps/dc_tools/odc/apps/dc_tools/: _docs.py  _stac.py  add_update_products.py  azure_to_dc.py  cop_dem_to_dc.py  esa_worldcover_to_dc.py  esri-lc-tiles-list.txt  esri_land_cover_to_dc.py  export_md.py  fs_to_dc.py  index_from_tar.py  s3_to_dc.py  sqs_to_dc.py  stac_api_to_dc.py  thredds_to_dc.py  utils.py
apps/dc_tools/tests/: conftest.py  test_add_update_products.py  test_azure_to_dc.py  test_cop_dem_do_dc.py  test_cop_dem_to_dc.py  test_esa_worldcover_to_dc.py  test_esri_lc_to_dc.py  test_fs_to_dc.py  test_s3_to_dc.py  test_sns_publishing.py  test_sqs_to_dc.py  test_stac_api_to_dc.py  test_stac_transform.py  test_statsd_reporting.py
apps/dc_tools/tests/data/: 29V-2021.stac-item.json  60U-2020.stac-item.json  NASADEM_HGT_s56w072.stac-item.json  S2A_17SPR_20221106_0_L2A.json  S2A_28QCH_20200714_0_L2A.json  S2A_28QCH_20200714_0_L2A.odc-metadata.json  S2B_31QGB_20200831_0_L2A.json  S2B_42TUM_20220107_0_L2A.json  S2B_T37MGP_20240710T073012_L2A_C1-odc-metadata.yaml  S2B_T37MGP_20240710T073012_L2A_C1.json  S2B_T37MGP_20240710T073012_L2A_C1_rel_links-odc-metadata.yaml  S2B_T37MGP_20240710T073012_L2A_C1_rel_links.json  eo3_sentinel_ard.odc-type.yaml  example_product_list.csv  ga_ls5t_gm_product.yaml  ga_ls5t_nbart_gm_cyear_3_x30y14_1999--P1Y_final.stac-item.json  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.stac-item.json  ga_ls8c_ard_3-1-0_088080_2020-05-25_final.stac-item.sqs.json  ga_ls8c_ard_3-1-0_088080_2020-05-25_nrt.odc-metadata.yaml  ga_s2am_ard_3-2-1_49JFM_2016-12-14_final.odc-metadata.yaml  ga_s2am_ard_3-2-1_49JFM_2016-12-14_final.stac-item.json  ls8_maturity_final.odc-metadata.yaml  ls8_maturity_nrt.odc-metadata.yaml  maturity-final.odc-metadata.yaml  maturity-nrt.odc-metadata.yaml  sentinel-2-nrt_2020_08_21.json  world-wrapping.stac-item.json
apps/dc_tools/tests/data/cemp_insar/01/07/: alos_cumul_2010-01-07.yaml
apps/dc_tools/tests/data/esa_worldcover/: ESA_WorldCover_10m_2020_v100_N03E003_Map.tif  ESA_WorldCover_10m_2020_v100_N03E006_Map.tif  ESA_WorldCover_10m_2020_v100_N06E003_Map.tif  ESA_WorldCover_10m_2020_v100_N06E006_Map.tif
apps/dnsup/: Makefile  README.md  dea-dns.service  setup.cfg  setup.py
apps/dnsup/dea_dnsup/: __init__.py
dea/: geom.py  (+2 more)
libs/algo/: Cargo.toml  README.md  setup.cfg  setup.py
libs/algo/odc/algo/: __init__.py  _broadcast.py  _dask.py  _dask_stream.py  _geomedian.py  _grouper.py  _masking.py  _memsink.py  _numeric.py  _numexpr.py  _percentile.py  _rgba.py  _tiff.py  _tools.py  _types.py  _warp.py  io.py  pixel.py  test_dask.py  test_masking.py
libs/algo/src/: lib.rs
libs/algo/tests/: test_dask.py  test_grouper.py  test_io.py  test_masking.py  test_memsink.py  test_numeric.py  test_percentile.py  test_warp.py
libs/cloud/: README.md  setup.cfg
libs/cloud/odc/: aio.py  azure.py  ppt.py  thredds.py
libs/cloud/odc/aio/: __init__.py  _impl.py
libs/cloud/odc/aws/: __init__.py  _find.py  dns.py  inventory.py  misc.py  queue.py  s3.py  s3_client.py  sqs.py
libs/cloud/odc/azure/: __init__.py  _impl.py
libs/cloud/odc/cloud/: __init__.py
libs/cloud/odc/ppt/: __init__.py  async_thread.py
libs/cloud/odc/thredds/: __init__.py
libs/cloud/tests/: test_aws.py  test_azure.py  test_thredds.py
libs/dscache/: README.md  setup.cfg  setup.py
libs/dscache/odc/dscache/: __init__.py  _dscache.py  _jsoncache.py  _text.py  dscache.py
libs/dscache/odc/dscache/apps/: dstiler.py  slurpy.py
libs/dscache/odc/dscache/tools/: __init__.py  profiling.py  test_tiling.py  tiling.py
libs/dscache/tests/: test_dscache.py  test_jsoncache.py
libs/io/: README.md  setup.cfg  setup.py
libs/io/odc/io/: __init__.py  cgroups.py  path.py  tar.py  text.py  timer.py
libs/io/tests/: test_text.py
libs/ppt/: README.md  setup.cfg  setup.py
libs/ppt/odc/ppt/: __init__.py  async_thread.py
libs/stats/: MANIFEST.in  README.md  setup.cfg  setup.py  stac_schema_cache.sqlite
libs/stats/docs/: bootstrap-db-s2.ipynb  example-cfg.yaml  pq-cfg.yaml
libs/stats/k8s/: Makefile  claim-ebs-kirill.yaml  runme.sh  stats-scratch.yaml
libs/stats/notebooks/: gm-mem-calc.py  k8s-job-gen.ipynb  s2-GM-stats.py
libs/stats/odc/stats/: __init__.py  _cli_app_runner.py  _cli_common.py  _cli_generate_cache.py  _cli_generate_mosaic.py  _cli_pq_queue.py  _cli_pq_run.py  _cli_publish_tasks.py  _cli_redrive_to_queue.py  _cli_run.py  _cli_run_gm.py  _cli_run_pq.py  _cli_save_tasks.py  _fc_percentiles.py  _gjson.py  _gm.py  _gm_bitmask.py  _gm_ls_bitmask.py  _gm_ml_pred.py  _plugins.py  _pq.py  _pq_bitmask.py  _pq_cli.py  _sqs.py  _stac_fetch.py  _tcw_percentile.py  _tcw_percentiles.py  _text.py  _wofs.py  cli.py  io.py  metadata.py  model.py  proc.py  tasks.py  utils.py
libs/stats/odc/stats/plugins/: __init__.py  _base.py  _registry.py  fc_percentiles.py  gm.py  gm_ls_bitmask.py  pq.py  pq_bitmask.py  tcw_percentiles.py  wofs.py
libs/stats/tests/: __init__.py  conftest.py  test_fc_percentiles.py  test_gm_ls_bitmask.py  test_ml_pipeline.py  test_pq_bitmask.py  test_proc.py  test_sqs.py  test_stats_model.py  test_text.py  test_tiles.db  test_utils.py
libs/thredds/: setup.cfg  setup.py
libs/thredds/odc/thredds/: __init__.py
libs/thredds/tests/: test_thredds.py
libs/ui/: README.md  setup.cfg  setup.py
libs/ui/odc/ui/: __init__.py  _cmaps.py  _dc_explore.py  _images.py  _map.py  _ui.py  plt_tools.py
libs/virtual/: setup.cfg
libs/virtual/odc/virtual/: __init__.py  catalog.py  expr.py  impl.py  transformations.py  utils.py
libs/virtual/tests/: test_virtual.py
(+337 files in other folders)
