[metadata]
name = odc-apps-cloud
description = CLI utils for working with objects/files in the cloud
version = attr: odc.apps.cloud.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.9
tests_require = pytest
install_requires =
    odc-cloud[ASYNC]
    odc-io
    click

[options.extras_require]
THREDDS = odc-cloud[THREDDS]
AZURE = odc-cloud[AZURE]
GCP = google-cloud-storage

[options.entry_points]
console_scripts =
    thredds-to-tar = odc.apps.cloud.thredds_to_tar:cli [THREDDS]
    gs-to-tar = odc.apps.cloud.gs_to_tar:cli [GCP]
    s3-find = odc.apps.cloud.s3_find:cli
    s3-inventory-dump = odc.apps.cloud.s3_inventory:cli
    s3-to-tar = odc.apps.cloud.s3_to_tar:cli
    redrive-queue = odc.apps.cloud.redrive_to_queue:cli
    azure-to-tar = odc.apps.cloud.azure_to_tar:cli [AZURE]


[options.packages.find]
include =
  odc*
