[metadata]
name = odc-apps-dc-tools
description = CLI utils for working with a datacube index
version = attr: odc.apps.dc_tools._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require =
    pytest
    deepdiff
    pytest-depends

install_requires =
    click
    fsspec
    pystac-client>=0.2.0
    toolz
    pyyaml
    datacube
    odc_index
    odc_io
    odc_aws
    odc_aio
    pystac>=1.1.0

[options.extras_require]
tests = pytest; deepdiff; pytest-depends
AZURE = odc_azure
THREDDS = odc_thredds

[options.entry_points]
console_scripts =
    dc-sync-products = odc.apps.dc_tools.add_update_products:cli
    dc-index-from-tar = odc.apps.dc_tools.index_from_tar:cli
    dc-index-export-md = odc.apps.dc_tools.export_md:cli
    s3-to-dc = odc.apps.dc_tools.s3_to_dc:cli
    thredds-to-dc = odc.apps.dc_tools.thredds_to_dc:cli [THREDDS]
    sqs-to-dc = odc.apps.dc_tools.sqs_to_dc:cli
    stac-to-dc = odc.apps.dc_tools.stac_api_to_dc:cli
    azure-to-dc = odc.apps.dc_tools.azure_to_dc:cli [AZURE]
    esri-lc-to-dc = odc.apps.dc_tools.esri_land_cover_to_dc:cli
    fs-to-dc = odc.apps.dc_tools.fs_to_dc:cli


[options.packages.find]
include =
  odc*
