[metadata]
name = dea-dnsup
description = Update DNS records for EC2 instances using route53 service
version = attr: dea_dnsup._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    odc_aws

[options.entry_points]
console_scripts =
    dea-dnsup = dea_dnsup:cli

[options.packages.find]
include =
  dea_dnsup*
