[metadata]
name = odc-algo
description = Miscellaneous Algorithmic helper methods
version = attr: odc.algo._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    affine
    dask
    dask_image
    datacube
    distributed
    numexpr
    numpy
    odc-stac
    rasterio
    scikit-image
    toolz
    xarray

[options.extras_require]
hdstats = hdstats>=0.1.7.post5
s3 =
    boto3
    odc-aws

[options.packages.find]
include =
  odc*
