[metadata]
name = odc-cloud
description = Various AWS helper methods
version = attr: odc.cloud._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    botocore
    boto3

[options.extras_require]
THREDDS = 
    thredds_crawler
    requests

AZURE = azure-storage-blob 
ASYNC = aiobotocore[boto3]>=1.0


[options.packages.find]
include =
  odc*
