[metadata]
name = odc-dscache
description = ODC Dataset File Cache
version = attr: odc.dscache._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    datacube
    odc-stac
    zstandard
    lmdb
    click
    toolz

[options.entry_points]
console_scripts =
   slurpy = odc.dscache.apps.slurpy:cli
   dstiler = odc.dscache.apps.dstiler:cli

[options.packages.find]
include =
  odc*
