[metadata]
name = odc-stats
description = Statistical Product Generation Framework
version = attr: odc.stats._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    datacube
    odc_index
    odc_dscache
    odc_algo
    odc_aws
    odc_aio
    tqdm
    pystac>=1.0.0
    eodatasets3>=0.22.0

[options.entry_points]
console_scripts =
    odc-stats = odc.stats.cli:main

[options.packages.find]
include =
  odc*
