[metadata]
name = odc-thredds
description = Various Thredds helper methods (for NCI)
version = attr: odc.thredds._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    thredds_crawler
    requests
    aiohttp

[options.packages.find]
include =
  odc*
