[metadata]
name = odc-virtual
description = ODC virtual product 
version = attr: odc.virtual._version.__version__
author = Open Data Cube
author_email =
maintainer = Open Data Cube
maintainer_email =
long_description_content_type = text/markdown
long_description = file: README.md
platforms = any
license = Apache License 2.0
url = https://github.com/opendatacube/odc-tools/

[options]
include_package_data = true
zip_safe = false
packages = find_namespace:
python_requires = >=3.6
tests_require = pytest
install_requires =
    affine
    dask
    dask_image
    datacube>=1.8.5
    distributed
    numexpr
    numpy
    rasterio>=1.3.2
    scikit-image
    toolz
    xarray
